--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@fastify/cors": "^9.0.1",
 		"@fastify/jwt": "^8.0.1",
 		"@fastify/rate-limit": "^8.1.1",
-		"@prisma/client": "^7.3.0",
+		"@prisma/client": "6.19.2",
 		"argon2": "^0.40.3",
 		"dotenv": "^16.4.5",
 		"fastify": "^4.28.1",
@@ -25,7 +25,7 @@
 	"devDependencies": {
 		"@types/node": "^20.19.10",
 		"pino-pretty": "^13.1.3",
-		"prisma": "^7.3.0",
+		"prisma": "6.19.2",
 		"tsx": "^4.16.2",
 		"typescript": "^5.5.4"
 	}
